{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 18,
  "lineage": "ff6a3c8f-068c-3b7a-03d8-bc7681f855b2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:092448908331:security-group/sg-0c988ce7978a7777c",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow cluster API Server to communicate with the worker nodes",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01afe2820017b0f5f"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0c988ce7978a7777c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01afe2820017b0f5f"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Test-k8s-cluster-sg",
            "name_prefix": "",
            "owner_id": "092448908331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Test-k8s-cluster-sg"
            },
            "tags_all": {
              "Name": "Test-k8s-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-099b68f3aa8554dea"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:092448908331:security-group/sg-01afe2820017b0f5f",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01afe2820017b0f5f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c988ce7978a7777c"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "Test-k8s-node-sg",
            "name_prefix": "",
            "owner_id": "092448908331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Test-k8s-node-sg",
              "kubernetes.io/cluster/Test-k8s-cluster": "owned"
            },
            "tags_all": {
              "Name": "Test-k8s-node-sg",
              "kubernetes.io/cluster/Test-k8s-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-099b68f3aa8554dea"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2449095079",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c988ce7978a7777c",
            "security_group_rule_id": "sgr-06c48a9aee94a913c",
            "self": false,
            "source_security_group_id": "sg-01afe2820017b0f5f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster API Server to communicate with the worker nodes",
            "from_port": 1024,
            "id": "sgrule-288019309",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c988ce7978a7777c",
            "security_group_rule_id": "sgr-0db24236878acb6f2",
            "self": false,
            "source_security_group_id": "sg-01afe2820017b0f5f",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-3734132557",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01afe2820017b0f5f",
            "security_group_rule_id": "sgr-0e1396154abd1da18",
            "self": false,
            "source_security_group_id": "sg-0c988ce7978a7777c",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-3313178700",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01afe2820017b0f5f",
            "security_group_rule_id": "sgr-0c8d72b8af03a9592",
            "self": false,
            "source_security_group_id": "sg-01afe2820017b0f5f",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_nodes"
          ]
        }
      ]
    }
  ]
}